# l10n-examples

./: Cargo.toml  README.md  build.rs  l10n.toml
l10n/: _terms.ftl
l10n/en/: app.ftl  formatters.ftl  settings.ftl
l10n/en-CA/: app.ftl
l10n/en-GB/: app.ftl  settings.ftl
l10n/fr/: app.ftl  formatters.ftl  settings.ftl
src/: main.rs
src/fluent/: time.rs
